--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port = ${PORT:8080}
 server.servlet.contextPath=/challenge
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=${URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASS}
+spring.datasource.url=URL=jdbc:mysql://containers-us-west-172.railway.app:6127/railway
+spring.datasource.username=root
+spring.datasource.password=bQpIWCOopFaYEkHKFFq6
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
