feat: prueba de variables db railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,9 @@ server.port = ${PORT:3000}
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-172.railway.app:6127/railway
-spring.datasource.username=root
-spring.datasource.password=bQpIWCOopFaYEkHKFFq6
-
+spring.datasource.url = ${MYSQLURL}
+spring.datasource.username = ${MYSQLUSERNAME}
+spring.datasource.password = ${MYSQLPASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.implicit_naming_strategy=default
